--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="flex justify-between h-16 items-center">
         <div class="flex items-center">
           <!-- Logo -->
-          <img src="/images/Logo.PNG" alt="Logo" class="logo mr-2">
+          <img src="images/Logo.PNG" alt="Logo" class="logo mr-2">
           <div class="navbar-text text-xl">Psicologa Kenny Conejeros Álvarez </div>
         </div>
         <div class="md:hidden">
