--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <section id="inicio" class="relative h-screen pt-16">
     <!-- Imagen de fondo -->
-    <img src="/images/image-section/inicio.jpg" alt="Bienestar emocional"
+    <img src="images/image-section/inicio.jpg" alt="Bienestar emocional"
       class="absolute inset-0 w-full h-full object-cover object-center z-0" />
 
     <!-- Capa oscura para contraste -->
@@ -148,7 +148,7 @@
       </div>
       <!-- Imagen a la derecha -->
       <div class="lg:w-1/2 flex justify-center">
-        <img src="/images/image-section/sobre-mi.jpg" alt="Imagen sobre mí"
+        <img src="images/image-section/sobre-mi.jpg" alt="Imagen sobre mí"
           class="w-48 h-48 object-cover rounded-full border-4 border-[#FDCEDF]">
       </div>
     </div>
@@ -269,7 +269,7 @@
 
       <!-- Centro: Logo y redes -->
       <div class="flex flex-col items-center">
-        <img src="/images/Logo.PNG" alt="Logo Psicología" class="mb-4 rounded-full">
+        <img src="images/Logo.PNG" alt="Logo Psicología" class="mb-4 rounded-full">
         <div class="flex space-x-4">
           <a href="#" class="text-[#AB4F6B] hover:text-[#82384f]"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="text-[#AB4F6B] hover:text-[#82384f]"><i class="fab fa-instagram"></i></a>
