--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
           <a href="#sobre-mi" class="hover:text-[#ABACAC] text-[#3f4143]">Sobre mí</a>
           <a href="#servicios" class="hover:text-[#ABACAC] text-[#3f4143]">Servicios</a>
           <a href="#blog" class="hover:text-[#ABACAC] text-[#3f4143]">Blog</a>
+          <a href="#galeria" class="hover:text-[#ABACAC] text-[#3f4143]">Galería</a>
         </div>
       </div>
     </div>
@@ -106,6 +107,7 @@
       <a href="#sobre-mi" class="text-xl text-[#3f4143] hover:text-[#ABACAC]">Sobre mí</a>
       <a href="#servicios" class="text-xl text-[#3f4143] hover:text-[#ABACAC]">Servicios</a>
       <a href="#blog" class="text-xl text-[#3f4143] hover:text-[#ABACAC]">Blog</a>
+      <a href="#galeria" class="text-xl text-[#3f4143] hover:text-[#ABACAC]">Galería</a>
     </div>
   </nav>
 
@@ -253,6 +255,48 @@
       </div>
     </div>
   </section>
+
+  <section id="galeria" class="bg-white py-16 px-6">
+  <div class="max-w-6xl mx-auto text-center mb-12">
+    <h2 class="text-3xl font-bold text-[#494a49] mb-2">Galería</h2>
+    <p class="text-gray-600">Un vistazo a mi espacio y momentos de acompañamiento emocional.</p>
+  </div>
+
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+    <!-- Imagen 1 -->
+    <div class="overflow-hidden rounded-2xl shadow-md">
+      <img src="https://via.placeholder.com/600x400" alt="Galería 1" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+    </div>
+
+    <!-- Imagen 2 -->
+    <div class="overflow-hidden rounded-2xl shadow-md">
+      <img src="https://via.placeholder.com/600x400" alt="Galería 2" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+    </div>
+
+    <!-- Imagen 3 -->
+    <div class="overflow-hidden rounded-2xl shadow-md">
+      <img src="https://via.placeholder.com/600x400" alt="Galería 3" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+    </div>
+
+    <!-- Imagen 4 -->
+    <div class="overflow-hidden rounded-2xl shadow-md">
+      <img src="https://via.placeholder.com/600x400" alt="Galería 4" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+    </div>
+
+    <!-- Imagen 5 -->
+    <div class="overflow-hidden rounded-2xl shadow-md">
+      <img src="https://via.placeholder.com/600x400" alt="Galería 5" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+    </div>
+
+    <!-- Imagen 6 -->
+    <div class="overflow-hidden rounded-2xl shadow-md">
+      <img src="https://via.placeholder.com/600x400" alt="Galería 6" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+    </div>
+  </div>
+</section>
+
+
+  
   <footer class="bg-[#f4f4f4] text-[#494a49] py-10 px-6">
     <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 items-start text-center md:text-left">
 
