--- a/index.html
+++ b/index.html
@@ -265,32 +265,32 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
     <!-- Imagen 1 -->
     <div class="overflow-hidden rounded-2xl shadow-md">
-      <img src="https://via.placeholder.com/600x400" alt="Galería 1" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+      <img src="images/image-gallery/image_1.jpg" alt="Galería 1" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
     </div>
 
     <!-- Imagen 2 -->
     <div class="overflow-hidden rounded-2xl shadow-md">
-      <img src="https://via.placeholder.com/600x400" alt="Galería 2" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+      <img src="images/image-gallery/image_2.jpg" alt="Galería 2" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
     </div>
 
     <!-- Imagen 3 -->
     <div class="overflow-hidden rounded-2xl shadow-md">
-      <img src="https://via.placeholder.com/600x400" alt="Galería 3" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+      <img src="images/image-gallery/image_3.jpg" alt="Galería 3" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
     </div>
 
     <!-- Imagen 4 -->
     <div class="overflow-hidden rounded-2xl shadow-md">
-      <img src="https://via.placeholder.com/600x400" alt="Galería 4" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+      <img src="images/image-gallery/image_4.jpg" alt="Galería 4" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
     </div>
 
     <!-- Imagen 5 -->
     <div class="overflow-hidden rounded-2xl shadow-md">
-      <img src="https://via.placeholder.com/600x400" alt="Galería 5" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+      <img src="images/image-gallery/image_1.jpg" alt="Galería 5" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
     </div>
 
     <!-- Imagen 6 -->
     <div class="overflow-hidden rounded-2xl shadow-md">
-      <img src="https://via.placeholder.com/600x400" alt="Galería 6" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
+      <img src="images/image-gallery/image_2.jpg" alt="Galería 6" class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300">
     </div>
   </div>
 </section>
