--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <div id="carousel" class="flex justify-center gap-6 overflow-x-auto scroll-smooth snap-x snap-mandatory px-6">
         <!-- Card -->
         <div class="w-[280px] md:w-[300px] flex-shrink-0 bg-white rounded-2xl shadow-lg overflow-hidden snap-center">
-          <img src="https://via.placeholder.com/600x300" class="w-full h-48 object-cover" />
+          <img src="images/image-gallery/image_1.jpg" class="w-full h-48 object-cover" />
           <div class="p-4">
             <h3 class="text-lg font-semibold text-[#494a49] mb-1">Ansiedad</h3>
             <p class="text-gray-600 text-sm mb-3">Estrategias para enfrentarla con herramientas terapéuticas.</p>
@@ -236,7 +236,7 @@
 
         <!-- Más cards -->
         <div class="w-[280px] md:w-[300px] flex-shrink-0 bg-white rounded-2xl shadow-lg overflow-hidden snap-center">
-          <img src="https://via.placeholder.com/600x300" class="w-full h-48 object-cover" />
+          <img src="images/image-gallery/image_2.jpg" class="w-full h-48 object-cover" />
           <div class="p-4">
             <h3 class="text-lg font-semibold text-[#494a49] mb-1">Autoestima</h3>
             <p class="text-gray-600 text-sm mb-3">Cultivar una relación sana contigo mismo/a.</p>
@@ -245,7 +245,7 @@
         </div>
 
         <div class="w-[280px] md:w-[300px] flex-shrink-0 bg-white rounded-2xl shadow-lg overflow-hidden snap-center">
-          <img src="https://via.placeholder.com/600x300" class="w-full h-48 object-cover" />
+          <img src="images/image-gallery/image_3.jpg" class="w-full h-48 object-cover" />
           <div class="p-4">
             <h3 class="text-lg font-semibold text-[#494a49] mb-1">Mindfulness</h3>
             <p class="text-gray-600 text-sm mb-3">Prácticas de atención plena para el bienestar emocional.</p>
@@ -313,7 +313,7 @@
 
       <!-- Centro: Logo y redes -->
       <div class="flex flex-col items-center">
-        <img src="images/Logo.PNG" alt="Logo Psicología" class="mb-4 rounded-full">
+        <img src="images/Logo.PNG" alt="Logo Psicología" class="mb-4 rounded-full w-24 sm:w-28 md:w-36 lg:w-36">
         <div class="flex space-x-4">
           <a href="#" class="text-[#AB4F6B] hover:text-[#82384f]"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="text-[#AB4F6B] hover:text-[#82384f]"><i class="fab fa-instagram"></i></a>
