--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
       </button>
 
       <!-- Carrusel -->
-      <div id="carousel" class="flex gap-6 overflow-x-auto scroll-smooth hide-scrollbar w-[1100px] mx-[50px] py-4">
+      <div id="carousel" class="flex gap-6 overflow-x-auto scroll-smooth hide-scrollbar w-[1150px] mx-[50px] py-4">
         <!-- Card 1 -->
         <div class="w-[260px] sm:w-[280px] flex-shrink-0 bg-white rounded-2xl overflow-hidden">
           <img src="images/image-gallery/image_1.jpg" class="w-full h-48 object-cover" />
@@ -357,64 +357,70 @@
     </div>
   </section>
 
+  
+
+
   <section id="galeria" class="bg-white py-16 px-6">
     <div class="max-w-6xl mx-auto text-center mb-12">
       <h2 class="text-3xl font-bold text-[#494a49] mb-2">Galería</h2>
       <p class="text-gray-600">Un vistazo a mi espacio y momentos de acompañamiento emocional.</p>
     </div>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-      <!-- Imagen 1 -->
-      <div class="overflow-hidden rounded-2xl shadow-md">
-        <img src="images/image-gallery/image_1.jpg" alt="Galería 1"
-          class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
-          onclick="openLightbox(this.src)">
-      </div>
+    <!-- NUEVO contenedor para centrar la galería -->
+    <div class="max-w-6xl mx-auto">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+        <!-- Imagen 1 -->
+        <div class="overflow-hidden rounded-2xl shadow-md">
+          <img src="images/image-gallery/image_1.jpg" alt="Galería 1"
+            class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
+            onclick="openLightbox(this.src)">
+        </div>
 
-      <!-- Imagen 2 -->
-      <div class="overflow-hidden rounded-2xl shadow-md">
-        <img src="images/image-gallery/image_2.jpg" alt="Galería 2"
-          class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
-          onclick="openLightbox(this.src)">
-      </div>
+        <!-- Imagen 2 -->
+        <div class="overflow-hidden rounded-2xl shadow-md">
+          <img src="images/image-gallery/image_2.jpg" alt="Galería 2"
+            class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
+            onclick="openLightbox(this.src)">
+        </div>
 
-      <!-- Imagen 3 -->
-      <div class="overflow-hidden rounded-2xl shadow-md">
-        <img src="images/image-gallery/image_3.jpg" alt="Galería 3"
-          class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
-          onclick="openLightbox(this.src)">
-      </div>
+        <!-- Imagen 3 -->
+        <div class="overflow-hidden rounded-2xl shadow-md">
+          <img src="images/image-gallery/image_3.jpg" alt="Galería 3"
+            class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
+            onclick="openLightbox(this.src)">
+        </div>
 
-      <!-- Imagen 4 -->
-      <div class="overflow-hidden rounded-2xl shadow-md">
-        <img src="images/image-gallery/image_4.jpg" alt="Galería 4"
-          class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
-          onclick="openLightbox(this.src)">
-      </div>
+        <!-- Imagen 4 -->
+        <div class="overflow-hidden rounded-2xl shadow-md">
+          <img src="images/image-gallery/image_4.jpg" alt="Galería 4"
+            class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
+            onclick="openLightbox(this.src)">
+        </div>
 
-      <!-- Imagen 5 -->
-      <div class="overflow-hidden rounded-2xl shadow-md">
-        <img src="images/image-gallery/image_1.jpg" alt="Galería 5"
-          class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
-          onclick="openLightbox(this.src)">
-      </div>
+        <!-- Imagen 5 -->
+        <div class="overflow-hidden rounded-2xl shadow-md">
+          <img src="images/image-gallery/image_1.jpg" alt="Galería 5"
+            class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
+            onclick="openLightbox(this.src)">
+        </div>
 
-      <!-- Imagen 6 -->
-      <div class="overflow-hidden rounded-2xl shadow-md">
-        <img src="images/image-gallery/image_2.jpg" alt="Galería 6"
-          class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
-          onclick="openLightbox(this.src)">
-      </div>
+        <!-- Imagen 6 -->
+        <div class="overflow-hidden rounded-2xl shadow-md">
+          <img src="images/image-gallery/image_2.jpg" alt="Galería 6"
+            class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
+            onclick="openLightbox(this.src)">
+        </div>
 
-      <!-- Imagen 7 -->
-      <div class="overflow-hidden rounded-2xl shadow-md">
-        <img src="images/image-gallery/image_3.jpg" alt="Galería 7"
-          class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
-          onclick="openLightbox(this.src)">
+        <!-- Imagen 7 -->
+        <div class="overflow-hidden rounded-2xl shadow-md">
+          <img src="images/image-gallery/image_3.jpg" alt="Galería 7"
+            class="w-full h-60 object-cover hover:scale-105 transition-transform duration-300 cursor-pointer"
+            onclick="openLightbox(this.src)">
+        </div>
       </div>
     </div>
 
-    <!-- Lightbox (agregado al final del <body>) -->
+    <!-- Lightbox -->
     <div id="lightbox"
       class="fixed inset-0 bg-black bg-opacity-80 hidden flex items-center justify-center z-50 transition-opacity duration-300">
       <div id="lightbox-content"
@@ -425,6 +431,7 @@
         class="absolute top-6 right-6 text-white text-3xl font-bold hover:text-[#AB4F6B] transition-colors duration-300">&times;</button>
     </div>
   </section>
+
 
 
   <!-- TIMELINE + INVESTIGACIONES -->
@@ -454,7 +461,7 @@
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold">Magíster en Psicología Clínica</h4>
+              <h4 class="text-xl font-semibold text-[#3f4143]">Magíster en Psicología Clínica</h4>
               <p class="text-gray-600">2016 - 2018</p>
               <p class="text-gray-500">Enfoque en salud mental y terapia individual.</p>
             </div>
@@ -469,7 +476,7 @@
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold">Psicóloga Clínica - Centro de Apoyo Psicológico</h4>
+              <h4 class="text-xl font-semibold text-[#3f4143]">Psicóloga Clínica - Centro de Apoyo Psicológico</h4>
               <p class="text-gray-600">2019 - Actualidad</p>
               <p class="text-gray-500">Atención a pacientes adultos en modalidad presencial y online.</p>
             </div>
@@ -484,7 +491,7 @@
             <div class="absolute left-[-36px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
             </div>
             <div class="ml-4">
-              <h4 class="text-xl font-semibold">Terapia de Parejas - Instituto XYZ</h4>
+              <h4 class="text-xl font-semibold text-[#3f4143]">Terapia de Parejas - Instituto XYZ</h4>
               <p class="text-gray-600">2021</p>
               <p class="text-gray-500">Formación específica en dinámicas vinculares y comunicación.</p>
             </div>
@@ -497,31 +504,34 @@
   <section id="historia-profesional" class="py-16 px-4 bg-[#f9f9f9]">
     <div class="max-w-4xl mx-auto">
       <h2 class="text-3xl font-semibold text-center text-[#3f4143] mb-10">Mi Historia Profesional</h2>
-  
+
       <div class="relative border-l-4 border-[#AB4F6B] pl-6 space-y-12">
         <!-- Evento 1 -->
         <div class="relative ml-4">
-          <div class="absolute left-[-52px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md"></div>
+          <div class="absolute left-[-52px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
+          </div>
           <h3 class="text-xl font-semibold text-[#3f4143]">2024 – Consulta Privada</h3>
           <p class="text-[#3f4143] text-base mt-1">
             Psicoterapia individual para adolescentes y adultos. Enfoque integrativo con énfasis en autocuidado y salud
             mental.
           </p>
         </div>
-  
+
         <!-- Evento 2 -->
         <div class="relative ml-4">
-          <div class="absolute left-[-52px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md"></div>
+          <div class="absolute left-[-52px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
+          </div>
           <h3 class="text-xl font-semibold text-[#3f4143]">2018 – 2023: Centro de Salud Mental ABC</h3>
           <p class="text-[#3f4143] text-base mt-1">
             Atención clínica y trabajo comunitario en salud mental. Desarrollo de talleres grupales y acompañamiento
             terapéutico.
           </p>
         </div>
-  
+
         <!-- Evento 3 -->
         <div class="relative ml-4">
-          <div class="absolute left-[-52px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md"></div>
+          <div class="absolute left-[-52px] top-1 w-5 h-5 bg-[#AB4F6B] rounded-full border-4 border-white shadow-md">
+          </div>
           <h3 class="text-xl font-semibold text-[#3f4143]">2013 – Titulación Psicología</h3>
           <p class="text-[#3f4143] text-base mt-1">
             Universidad XYZ. Licenciada en Psicología, con distinción máxima. Memoria sobre trauma psicológico en
@@ -531,7 +541,7 @@
       </div>
     </div>
   </section>
-  
+
 
 
 
